<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="100dp"
        android:elevation="10dp"
        app:srcCompat="@mipmap/ic_launcher_round"/>

    <Button
        android:layout_centerInParent="true"
        android:text="@string/login_landing"
        android:id="@+id/login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="20dp"/>
    <Button
        android:layout_centerHorizontal="true"
        android:layout_below="@id/login"
        android:text="@string/signup_landing"
        android:id="@+id/sign_up"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="20dp"/>
    <Button
        android:layout_centerHorizontal="true"
        android:layout_below="@id/sign_up"
        android:text="@string/express_login"
        android:id="@+id/express_login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="20dp"/>


</LinearLayout>