<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:theme="@style/CozyTimeThemeContent">

    <android.support.design.widget.TextInputLayout

        android:id="@+id/account_layout"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:theme="@style/input_text_style">

        <EditText
            android:id="@+id/account_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/account"
            android:textColor="#000000"
            android:textSize="15sp"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/account_layout"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:theme="@style/input_text_style">

        <EditText
            android:id="@+id/password_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColor="#000000"
            android:textSize="15sp"/>
    </android.support.design.widget.TextInputLayout>

    <Button

        android:id="@+id/signup_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_layout"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/signup"/>
</RelativeLayout>